Fix: Adds line spacing for paragraph elements.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -34,6 +34,7 @@ p {
   font-size: 18px;
   line-height: 1.5;
   font-weight: 400;
+  margin-bottom: 1em;
 }
 
 h1 {
